Small German translation update.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31592 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.imageio/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.imageio/plugin.xml
@@ -37,9 +37,9 @@
       <wizard
             class="net.refractions.udig.catalog.imageio.mosaicwizard.MosaicImportWizard"
             id="eu.hydrologis.jgrass.dxfdwg.wizard.DxfImportWizard"
-            name="Import imagery folder as mosaic">
+            name="%Import.ImagesAsMosaic">
          <description>
-            Import a dxf file converting it to shapefile into the workspace.
+            %Import.ImagesAsMosaic.tooltip
          </description>
       </wizard>
    </extension>
