--- a/plugins/net.refractions.udig.project.ui/plugin.xml
+++ b/plugins/net.refractions.udig.project.ui/plugin.xml
@@ -8,6 +8,7 @@
    <extension-point id="featureEditor" name="%featureEditor.point" schema="schema/featureEditor.exsd"/>
    <extension-point id="toolManagers" name="toolManagers" schema="schema/toolManagers.exsd"/>
    <extension-point id="pdfTemplates" name="PDF Templates" schema="schema/pdfTemplates.exsd"/>
+   <extension-point id="featurePanel" name="%featurePanel.point" schema="schema/featurePanel.exsd"/>
    
  	<extension
          point="org.eclipse.ui.popupMenus">
