define a new product for the sdk so it stops changing the name of the normal product
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31634 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig/plugin.xml
+++ b/plugins/net.refractions.udig/plugin.xml
@@ -96,4 +96,12 @@
          <externalCatalogueURL url="http://udig.refractions.net"/>
       </externalCatalogue>
    </extension>
+   <extension
+         id="sdk"
+         point="org.eclipse.core.runtime.products">
+      <product
+            application="net.refractions.udig.ui.application"
+            name="uDig SDK">
+      </product>
+   </extension>
 </plugin>
